[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
geo = { version = "0.32.0", optional = true }

[features]
day9 = ["dep:geo"]

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"
required-features = ["day9"]

[[bin]]
name = "day10"
path = "src/day10.rs"
